--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>Making a website for my future</p>
+      <p>Making a website for my future!</p>
 
       <footer class="site-footer">
 
