--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <section class="main-content">
       <p>Making a website for my future!</p>
+      <p>I thought learning to code would be impossible</p>
 
       <footer class="site-footer">
 
