So much to learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Abacchus.GitHub.io by abacchus</title>
+    <title>Alexandra Bacchus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,13 +11,20 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Abacchus.GitHub.io</h1>
+      <h1 class="project-name">Alexandra Camille Bacchus</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
     <section class="main-content">
-      <p>Making a website for my future!</p>
-      <p>I thought learning to code would be impossible</p>
+      <p>What do you want to
+        <a href=https://www.linkedin.com/in/alexandrabacchus>know</a>?</p>
+      <p>My website of secrets.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/4m1EFMoRFvY" frameborder="0" allowfullscreen></iframe>
+      <p>
+        Pi to the 29th decimal
+      <a href=http://www.geom.uiuc.edu/~huberty/math5337/groupe/digits.html>point</a>.</p>
+      <p>Fourth paragraph</p>
+
 
       <footer class="site-footer">
 
@@ -26,6 +33,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
